k8s/ingress/ingress-evohome.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: evohome-ing
  namespace: evohome
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - http:
        paths:
          - path: /evohome
            pathType: Prefix
            backend:
              service:
                name: evohome-exporter
                port:
                  number: 8082
